# ikastool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  defaultcfg.py  gas-code.js  main.py  pyproject.toml  readme.md  replit_zip_error_log.txt
.cache/replit/nix/: env.json
.upm/: store.json
bot/: defaultcfg.py  main.py  requirements.txt  server.py
bot/cogs/: dettach_channel.py  echo.py  set_channel.py
bot/cogs/lfg/: anarchy_open.py  another_game.py  any_spla.py  event.py  open_or_priv.py  plzsp.py  private.py  salmon.py  splatfest.py  study_chat.py  tableturf.py  turf_war.py
bot/cogs/lfg/modules/: create_lfg.py
cogs/: dettach_channel.py  help.py  ping.py  set_channel.py
cogs/host/: another_game.py  any_spla.py  leag_or_priv.py  league.py  plzsp.py  private.py  salmon.py  splatfest.py  study_chat.py  turf_war.py
cogs/host/modules/: host.py
cogs/lfg/: another_game.py  any_spla.py  event.py  open_or_priv.py  plzsp.py  splatfest.py
cogs/lfg/modules/: create_lfg.py
