[project]
name = "ikastool"
version = "0.1.0"
authors = []
description = ""
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "flask >= 3.0.0",
    "disnake == 2.8.1",
    "sqlitedict >= 2.1.0",
    "pytz >= 2023.3.post1",
    "requests >= 2.31.0",
    "python-dotenv >= 1.0.0",
]
